# hud-python

./: .env.example  .gitignore  .gitmodules  .rl_config_temp.json  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  README.md  app.py  browser_2048_tasks.jsonl  fast_config.json  launch_ddp_training.sh  pyproject.toml  test_mcp.py  test_optional_imports.py
environments/blank/: .env.example  Dockerfile  README.md  pyproject.toml  tasks.json  test_env.ipynb  test_task.py
environments/blank/controller/: README.md  __init__.py  __main__.py  hooks.py  tools.py
environments/blank/environment/: README.md  server.py
environments/blank/server/: __init__.py  main.py  pyproject.toml  shared.py  tools.py
environments/blank/src/controller/: __init__.py  env.py  server.py
environments/browser/: .dockerignore  .gitignore  Dockerfile  Dockerfile.local  README.md  hud.lock.yaml  pyproject.toml  tasks.json
environments/browser/apps/2048/: README.md  launch.py
environments/browser/apps/2048/backend/: game.py  main.py  pyproject.toml
environments/browser/apps/2048/frontend/: package-lock.json  package.json
environments/browser/apps/todo/: README.md
environments/browser/apps/todo/backend/: main.py
environments/browser/browser-base/: Dockerfile  README.md
environments/browser/controller/: __init__.py  __main__.py  hooks.py  resources.py  tools.py
environments/browser/controller/evaluate/: __init__.py  game_2048.py  todo.py
environments/browser/controller/setup/: __init__.py  game_2048.py  todo.py
environments/browser/environment/: __init__.py  pyproject.toml  server.py  start.sh
environments/browser/environment/2048/: launch.py
environments/browser/environment/todo/: README.md  launch.py
environments/browser/server/: __init__.py  main.py  pyproject.toml  resources.py  shared.py  tools.py
environments/browser/server/evaluate/: __init__.py  game_2048.py  todo.py
environments/browser/server/setup/: __init__.py  game_2048.py  todo.py
environments/browser/src/hud_controller/: README.md  context.py  server.py  services.py
environments/browser/src/hud_controller/evaluate/: __init__.py  game_2048.py  todo.py
environments/browser/src/hud_controller/evaluators/: __init__.py  game_2048.py  todo.py
environments/browser/src/hud_controller/problems/: __init__.py  game_2048.py  registry.py  todo.py
environments/browser/src/hud_controller/setup/: __init__.py  apps.py  game_2048.py  registry.py  todo.py
environments/deepresearch/: .gitignore  Dockerfile  README.md  pyproject.toml  remote_tasks.json  tasks.json
environments/deepresearch/controller/: __init__.py  __main__.py  server.py
environments/deepresearch/environment/: __init__.py  pyproject.toml  server.py
environments/deepresearch/server/: __init__.py  main.py  pyproject.toml
environments/deepresearch/src/hud_controller/: __init__.py  context.py  server.py
environments/local_qa/: Dockerfile  info.py  pyproject.toml  step.py
environments/local_qa/evaluate/: matchers.py
environments/local_qa/setup/: __init__.py  question.py
environments/local_qa/utils/: state.py
environments/novnc_ubuntu/: Dockerfile  pyproject.toml
environments/novnc_ubuntu/src/hud_controller/: pyautogui_rosetta.py  step.py
environments/novnc_ubuntu/src/novnc_ubuntu/: __init__.py  pyautogui_rosetta.py  step.py
environments/pokemon_controller/: Dockerfile  pyproject.toml
environments/pokemon_controller/src/hud_controller/: __init__.py  display_adapters.py  emulator.py  evaluator.py  kill.py  main.py  setup.py  step.py
environments/remote_browser/: .gitignore  Dockerfile  README.md  hud.lock.yaml  pyproject.toml  test_mcp.sh  test_reloadability.py  test_task.json
environments/remote_browser/src/hud_controller/: __init__.py  __main__.py  browser_computer_tool.py  browser_executor.py  context.py  playwright_with_memory.py  runtime.py  server.py
environments/remote_browser/src/hud_controller/evaluate/: __init__.py  cookie_exists.py  cookie_match.py  element_exists.py  history_length.py  page_contains.py  raw_last_action_is.py  selector_history.py  sheet_contains.py  sheets_cell_values.py  url_match.py  verify_type_action.py
environments/remote_browser/src/hud_controller/evaluators/: __init__.py  context.py  cookie_exists.py  cookie_match.py  history_length.py  page_contains.py  raw_last_action_is.py  registry.py  selector_history.py  sheet_contains.py  sheets_cell_values.py  url_match.py  verify_type_action.py
environments/remote_browser/src/hud_controller/problems/: __init__.py  element_interaction.py  form_interaction.py  navigate_and_verify.py  registry.py  search_interaction.py
environments/remote_browser/src/hud_controller/providers/: README.md  __init__.py  anchorbrowser.py  base.py  browserbase.py  hyperbrowser.py  kernel.py  steel.py
environments/remote_browser/src/hud_controller/setup/: __init__.py  cookies.py  interact.py  load_html.py  navigate.py  registry.py  sheets.py
environments/remote_browser/src/hud_controller/tools/: __init__.py  computer.py  executor.py  playwright.py
environments/rubrics/: .env.example  Dockerfile  README.md  pyproject.toml  remote_tasks.json  tasks.json
environments/rubrics/environment/: __init__.py  edgar_utils.py  exa_utils.py  pyproject.toml  server.py
environments/rubrics/server/: __init__.py  main.py  pyproject.toml
environments/simple_browser/apps/todo/backend/: main.py  pyproject.toml
environments/text_2048/: 2048_taskconfigs.json  Dockerfile  Dockerfile.local  README.md  hud.lock.yaml  pyproject.toml  test_text_2048_mcp.py
environments/text_2048/src/hud_controller/: __init__.py  context.py  game.py  server.py
environments/x11_novnc_debian_controller/: pyproject.toml
rl/: README.md  art_train_2048.py  art_train_2048_colab.ipynb  pyproject.toml  train_2048.py  verifiers_train_2048.py
rl/art/: README.md  hud_rl_2048.ipynb
rl/art_integration/: README.md  __init__.py  art_agent.py  config.yaml  example_2048.py  train_hud_art.py
rl/configs/: 2048.yaml  default.yaml
rl/verifiers/: README.md  train_2048.py
rl/verifiers/configs/: default.yaml
(+708 files in other folders)
