[project]
name = "hud-browser-controller"
version = "0.1.0"
description = "HUD Browser Controller - MCP interface for browser environments"
requires-python = ">=3.11,<3.14"
dependencies = [
    "hud-python @ git+https://github.com/hud-evals/hud-python@env-cli-improvements",
    "playwright", 
    "pyautogui", 
    "httpx", 
    "typer",
    "fastapi",
    "uvicorn",
    "pydantic",
]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
hud-browser-controller = "controller.__main__:main"

[tool.hud]
image = "hud-browser:dev"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "controller", "problems",]
