[project]
name = "deepresearch"
version = "0.1.0"
description = "A minimal HUD environment for web research"
requires-python = ">=3.11"
dependencies = [ "hud-python", "httpx>=0.24.0", "lxml>=4.9.0",]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hud]
image = "deepresearch:dev"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/hud_controller",]
