[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "novnc_ubuntu"
version = "0.1.0"
description = "A controller for a novnc-based visual ubuntu environment for general purpose OS tasks"
authors = [
    {name = "hud team", email = "founders@hud.so"}
]
requires-python = ">=3.10"
dependencies = [
    "nltk>=3.7",
    "pyautogui>=0.9.54",
    "pillow>=11.2.1",
]
