[project]
name = "hud-text-2048"
version = "0.1.0"
description = "Text-based 2048 game environment for hud"
requires-python = ">=3.11"
dependencies = [ "hud-python", "numpy",]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.optional-dependencies]
test = [ "pytest>=7.0", "pytest-asyncio>=0.20",]

[tool.hud]
image = "hud-text-2048:dev"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = [ "src/hud_controller",]
