[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qa_controller"
version = "0.1.0"
description = "A controller for a text-based question answering environment"
authors = [
    {name = "hud team", email = "founders@hud.so"}
]
requires-python = ">=3.10"
dependencies = [
    "nltk>=3.7",
]