[project]
name = "hud-browser-server"
version = "0.1.0"
description = "HUD Browser MCP Server"
requires-python = ">=3.11,<3.14"
dependencies = [
    "hud-python@git+https://github.com/hud-evals/hud-python@cli-dev",
    "httpx",
    "playwright",
    "pyautogui",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["server"]
