[project]
name = "rubrics-mcp"
version = "0.1.0"
description = "MCP server for Rubrics environment"
requires-python = ">=3.11"
dependencies = [
    "hud-python>=0.4.54",
    "httpx>=0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mcp"]
