[project]
name = "sample-backend"
version = "0.1.0"
description = "FastAPI backend for sample app"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "sqlalchemy==2.0.25",
    "pydantic==2.5.3",
    "python-multipart==0.0.6",
]

[tool.uv]
dev-dependencies = [] 